--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-"Hello World!!!" 
+<!DOCTYPE html>
+<html>
+<head>
+<title>Home Page</title>
+</head>
+<body>
+This is a temporary home page.
+</body>
+</html>
