--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <title>Home Page</title>
 </head>
 <body>
-This is a very temporary home page.
+
+<a href="http://currah.co.uk/model">Standard model</a>
+
+
 </body>
 </html>
